# pystapi

./: .dockerignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  RELEASING.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yaml  docker_image.yaml  pypi.yaml  release.yaml
docs/: index.md  pystapi-client.md  stapi-fastapi.md  stapi-pydantic.md
docs/pystapi-client/: api.md  index.md
docs/stapi-client/: index.md
docs/stapi-pydantic/: api.md  index.md
pystapi-client/: README.md  pyproject.toml
pystapi-client/src/pystapi_client/: __init__.py  _utils.py  cli.py  client.py  collection_client.py  collection_search.py  conformance.py  exceptions.py  item_search.py  layout.py  mixins.py  stapi_api_io.py  warns.py
pystapi-client/src/pystapi_client/scripts/: cli.py
pystapi-client/tests/: conftest.py  test_client.py
pystapi-client/tests/fixtures/: landing_page.json  products.json
pystapi-schema-generator/: CHANGELOG.md  README.md  pyproject.toml
pystapi-schema-generator/src/pystapi_schema_generator/: __init__.py  application.py  backend.py  product.py  product_router.py  root_router.py  router.py
pystapi-validator/: README.md  pyproject.toml
pystapi-validator/src/pystapi_validator/: __init__.py
pystapi-validator/tests/: validate_api.py
scripts/: format  lint  release  validate-stapi-fastapi
stapi-fastapi/: CHANGELOG.md  README.md  pyproject.toml
stapi-fastapi/src/stapi_fastapi/: __init__.py  conformance.py  errors.py  exceptions.py
stapi-fastapi/src/stapi_fastapi/backends/: product_backend.py  root_backend.py
stapi-fastapi/src/stapi_fastapi/models/: __init__.py  order.py  product.py  root.py  shared.py
stapi-fastapi/src/stapi_fastapi/routers/: product_router.py  root_router.py  route_names.py
stapi-fastapi/src/stapi_fastapi/types/: datetime_interval.py
stapi-fastapi/tests/: application.py  backends.py  conftest.py  shared.py  test_api_validation.py  test_conformance.py  test_datetime_interval.py  test_opportunity.py  test_opportunity_async.py  test_order.py  test_product.py  test_root.py
stapi-pydantic/: CHANGELOG.md  README.md  pyproject.toml
stapi-pydantic/src/stapi_pydantic/: __init__.py  compatibility.py  conformance.py  constants.py  datetime_interval.py  filter.py  json_schema_model.py  opportunity.py  order.py  product.py  queryables.py  root.py  shared.py
stapi-pydantic/tests/: test_datetime_interval.py  test_json_schema.py  test_opportunity.py  test_order.py  test_product.py  test_request.py
stapi-validator/: README.md  pyproject.toml
stapi-validator/src/stapi_validator/: __init__.py
stapi-validator/tests/: validate_api.py
