[project]
name = "pystapi"
version = "0.0.0" # This package should never be released, only the workspace members should be
description = "Monorepo for Satellite Tasking API (STAPI) Specification Python packages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocstrings-python>=1.16.8",
    "stapi-pydantic",
    "pystapi-validator"
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
docs = [
    "mkdocs-material>=9.6.11",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.uv.workspace]
members = ["stapi-pydantic", "pystapi-validator"]

[tool.uv.sources]
stapi-pydantic.workspace = true
pystapi-validator.workspace = true

[tool.mypy]
strict = true
files = [
    "stapi-pydantic/src/stapi_pydantic/**/*.py",
    "pystapi-validator/src/pystapi_validator/**/*.py"
]
