[project]
name = "pystapi"
version = "0.0.0" # This package should never be released, only the workspace members should be
description = "Monorepo for Satellite Tasking API (STAPI) Specification Python packages"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pystapi-validator",
    "stapi-pydantic",
    "stapi-fastapi"
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "pytest-coverage>=0.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "pymarkdownlnt>=0.9.25",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
]
docs = [
    "mkdocs-material>=9.6.11",
    "mkdocstrings-python>=1.16.8",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.uv.workspace]
members = ["pystapi-validator", "stapi-pydantic", "stapi-fastapi"]

[tool.uv.sources]
pystapi-validator.workspace = true
stapi-pydantic.workspace = true
stapi-fastapi.workspace = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'double'

[tool.ruff.lint]
select = [
    "E",  # pydocstyle error
    "W",  # pydocstyle warning
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "C9"  # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 8  # default 10

[tool.mypy]
strict = true
files = [
    "pystapi-validator/src/pystapi_validator/**/*.py",
    "stapi-pydantic/src/stapi_pydantic/**/*.py",
    "stapi-fastapi/src/stapi_fastapi/**/*.py"
]

[[tool.mypy.overrides]]
module = "pygeofilter.parsers.*"
ignore_missing_imports = true

[tool.pymarkdown]
plugins.md013.line_length = 120
plugins.md024.enabled = false  # duplicate headers in changelog

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Cover"
omit = [
    "stapi-pydantic/tests/**/*.py",
    "stapi-fastapi/tests/**/*.py",
]

[tool.pytest.ini_options]
addopts="--cov=stapi-pydantic/src/stapi_pydantic --cov=stapi-fastapi/src/stapi_fastapi"
filterwarnings = [
    "ignore:The 'app' shortcut is now deprecated.:DeprecationWarning",
    "ignore:Pydantic serializer warnings:UserWarning",
]
markers = [
    "mock_products",
]
