[project]
name = "pystapi"
version = "0.0.0" # This package should never be released, only the workspace members should be
description = "Monorepo for Satellite Tasking API (STAPI) Specification Python packages"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pystapi-client",
    "pystapi-validator",
    "pystapi-schema-generator",
    "stapi-pydantic",
    "stapi-fastapi"
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "pymarkdownlnt>=0.9.25",
    "pre-commit>=4.2.0",
    "pre-commit-hooks>=5.0.0",
    "fastapi[standard]>=0.115.12",
    "pygithub>=2.6.1",
]
docs = [
    "mkdocs-material>=9.6.11",
    "mkdocstrings-python>=1.16.8",
]

[tool.uv]
default-groups = ["dev", "docs"]

[tool.uv.workspace]
members = [
    "pystapi-client",
    "pystapi-validator",
    "pystapi-schema-generator",
    "stapi-pydantic",
    "stapi-fastapi"
]

[tool.uv.sources]
pystapi-client.workspace = true
pystapi-validator.workspace = true
pystapi-schema-generator.workspace = true
stapi-pydantic.workspace = true
stapi-fastapi.workspace = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'double'

[tool.ruff.lint]
select = [
    "E",  # pydocstyle error
    "W",  # pydocstyle warning
    "F",  # Pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "C9"  # mccabe complexity
]

[tool.ruff.lint.mccabe]
max-complexity = 8  # default 10

[tool.mypy]
strict = true
files = [
    "pystapi-client/src/pystapi_client/**/*.py",
    "pystapi-validator/src/pystapi_validator/**/*.py",
    "pystapi-schema-generator/src/pystapi_schema_generator/**/*.py",
    "stapi-pydantic/src/stapi_pydantic/**/*.py",
    "stapi-fastapi/src/stapi_fastapi/**/*.py"
]

[[tool.mypy.overrides]]
module = "pygeofilter.parsers.*"
ignore_missing_imports = true

[tool.pymarkdown]
plugins.md013.enabled = false  # @gadomski likes to do one-line-per-sentence in markdown
plugins.md024.enabled = false  # duplicate headers in changelog
plugins.md041.enabled = false  # github templates don't start with an h1
plugins.md046.enabled = false  # code block style (we use both for mkdocs)

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:The 'app' shortcut is now deprecated.:DeprecationWarning",
    "ignore:Pydantic serializer warnings:UserWarning",
    "ignore:jsonschema.exceptions.RefResolutionError is deprecated:DeprecationWarning",
]
markers = [
    "mock_products",
]
