[project]
name = "pystapi-client"
version = "0.0.1"
description = "Python library for searching Satellite Tasking API (STAPI) APIs."
readme = "README.md"
authors = [
    { name = "Kaveh Karimi-Asli", email = "ka7eh@pm.me" },
    { name = "Philip Weiss", email = "philip.weiss@orbitalsidekick.com" },
    { name = "Stella Reinhardt", email = "stella@stellamaria.de"}
]
maintainers = [{ name = "Pete Gadomski", email = "pete.gadomski@gmail.com" }]
keywords = ["stapi"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "stapi-pydantic",
    "python-dateutil>=2.8.2",
    "click>=8.1.8",
]

[project.scripts]
stapi = "pystapi_client.scripts.cli:cli"

[tool.uv.sources]
stapi-pydantic = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
