[project]
name = "stapi-pydantic"
version = "0.0.4"
description = "Pydantic models for Satellite Tasking API (STAPI) Specification"
readme = "README.md"
authors = [
    { name = "Phil Varner", email = "philvarner@gmail.com" },
    { name = "Pete Gadomski", email = "pete.gadomski@gmail.com" },
]
requires-python = ">=3.11"
dependencies = ["cql2>=0.3.6", "geojson-pydantic>=1.2.0"]

[project.scripts]
stapi-pydantic = "stapi_pydantic:main"

[tool.hatch.build.targets.sdist]
include = ["src/stapi_pydantic"]

[tool.hatch.build.targets.wheel]
include = ["src/stapi_pydantic"]

[tool.hatch.build.targets.wheel.sources]
"src/stapi_pydantic" = "stapi_pydantic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
]
