[project]
name = "stapi-validator"
version = "0.1.0"
description = "API validation for STAPI FastAPI using Schemathesis and OpenAPI YAML with reporting"
authors = [
    { name = "Brian Terry", email = "brian.b.terry@ama-inc.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "schemathesis>=3.37.0",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "pyyaml>=6.0.2",
    "pytest-html>=4.1.1",
    "pytest-metadata>=3.1.1",
]

[project.scripts]
stapi-validator = "stapi_validator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
